--- a/index.html
+++ b/index.html
@@ -14,20 +14,25 @@
     const supabaseUrl = "https://qdzsdflucgnkmbppbsse.supabase.co";
     const supabaseKey = "sb_publishable_MfYiIj7P3uRBRltC8EudcA_o_rqIxCr";
 
-    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+    // Use the global supabase object provided by the CDN
+    const client = window.supabase.createClient(supabaseUrl, supabaseKey);
 
     document.getElementById("login").addEventListener("click", async () => {
-      await supabase.auth.signInWithOAuth({
+      await client.auth.signInWithOAuth({
         provider: "google",
       });
     });
 
-    supabase.auth.getUser().then(({ data }) => {
-      if (data.user) {
+    async function checkUser() {
+      const { data: { user } } = await client.auth.getUser();
+
+      if (user) {
         document.getElementById("user").innerText =
-          "Logged in as " + data.user.email;
+          "Logged in as " + user.email;
       }
-    });
+    }
+
+    checkUser();
   </script>
 </body>
 </html>
