--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
   <div id="app-section" style="display:none;">
     <p id="user"></p>
-    <button id="addMoney">Add $100</button>
+
+    <h3>Buy Test Stock</h3>
+    <button id="buyStock">Buy 1 Share of AAPL ($100)</button>
+
     <button id="logout">Logout</button>
   </div>
 
@@ -24,9 +27,11 @@
 
     const client = window.supabase.createClient(supabaseUrl, supabaseKey);
 
+    const STARTING_CASH = 10000;
+
     const loginBtn = document.getElementById("login");
     const logoutBtn = document.getElementById("logout");
-    const addMoneyBtn = document.getElementById("addMoney");
+    const buyBtn = document.getElementById("buyStock");
 
     const authSection = document.getElementById("auth-section");
     const appSection = document.getElementById("app-section");
@@ -35,9 +40,7 @@
     let currentUser = null;
 
     loginBtn.addEventListener("click", async () => {
-      await client.auth.signInWithOAuth({
-        provider: "google",
-      });
+      await client.auth.signInWithOAuth({ provider: "google" });
     });
 
     logoutBtn.addEventListener("click", async () => {
@@ -45,49 +48,53 @@
       location.reload();
     });
 
-    addMoneyBtn.addEventListener("click", async () => {
+    buyBtn.addEventListener("click", async () => {
       if (!currentUser) return;
 
-      const { data } = await client
-        .from("profiles")
-        .select("balance")
-        .eq("id", currentUser.id)
-        .single();
+      const balance = await calculateBalance();
 
-      const newBalance = Number(data.balance) + 100;
+      if (balance < 100) {
+        alert("Not enough cash!");
+        return;
+      }
 
-      await client
-        .from("profiles")
-        .update({ balance: newBalance })
-        .eq("id", currentUser.id);
+      await client.from("transactions").insert({
+        user_id: currentUser.id,
+        symbol: "AAPL",
+        shares: 1,
+        price: 100,
+        type: "buy"
+      });
 
-      await loadProfile(currentUser);
+      await loadDashboard();
     });
 
-    async function ensureProfile(user) {
+    async function calculateBalance() {
       const { data } = await client
-        .from("profiles")
+        .from("transactions")
         .select("*")
-        .eq("id", user.id)
-        .single();
+        .eq("user_id", currentUser.id);
 
-      if (!data) {
-        await client.from("profiles").insert({
-          id: user.id,
-          email: user.email,
-        });
-      }
+      let totalSpent = 0;
+
+      data.forEach(tx => {
+        if (tx.type === "buy") {
+          totalSpent += tx.price * tx.shares;
+        }
+        if (tx.type === "sell") {
+          totalSpent -= tx.price * tx.shares;
+        }
+      });
+
+      return STARTING_CASH - totalSpent;
     }
 
-    async function loadProfile(user) {
-      const { data } = await client
-        .from("profiles")
-        .select("*")
-        .eq("id", user.id)
-        .single();
+    async function loadDashboard() {
+      const balance = await calculateBalance();
 
       userText.innerText =
-        "Logged in as " + user.email + " | Balance: $" + data.balance;
+        "Logged in as " + currentUser.email +
+        " | Cash: $" + balance.toFixed(2);
 
       authSection.style.display = "none";
       appSection.style.display = "block";
@@ -98,8 +105,7 @@
 
       if (session && session.user) {
         currentUser = session.user;
-        await ensureProfile(session.user);
-        await loadProfile(session.user);
+        await loadDashboard();
       }
     }
 
