--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
     const client = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-    const STARTING_CASH = 10000;
     const STOCK_PRICE = 100;
 
     const loginBtn = document.getElementById("login");
@@ -81,24 +80,35 @@
       await loadDashboard();
     };
 
-    // ---------- BALANCE LOGIC ----------
+    // ---------- BALANCE CALCULATION ----------
 
     async function calculateBalance() {
-      const { data, error } = await client
+      // 1. Get base balance from profiles
+      const { data: profile, error: profileError } = await client
+        .from("profiles")
+        .select("balance")
+        .eq("id", currentUser.id)
+        .single();
+
+      if (profileError || !profile) return 0;
+
+      // 2. Get transaction history
+      const { data: transactions, error: txError } = await client
         .from("transactions")
         .select("shares, price, type")
         .eq("user_id", currentUser.id);
 
-      if (error || !data) return 0;
+      if (txError || !transactions) return profile.balance;
 
+      // 3. Calculate net transaction effect
       let net = 0;
 
-      data.forEach(tx => {
+      transactions.forEach(tx => {
         const amount = tx.price * tx.shares;
         net += tx.type === "buy" ? amount : -amount;
       });
 
-      return STARTING_CASH - net;
+      return profile.balance - net;
     }
 
     // ---------- UI ----------
@@ -122,14 +132,14 @@
       appSection.style.display = "block";
     }
 
-    // ---------- SESSION CHECK ----------
+    // ---------- SESSION INIT ----------
 
     async function init() {
       const { data: { session } } = await client.auth.getSession();
 
       if (session && session.user) {
         currentUser = session.user;
-        await loadDashboard();
+        await loadDashboard(); // always fetch fresh data on reload
       } else {
         showAuth();
       }
